# eval-from-scratch

./: .gitignore  CMakeLists.txt  README.md
lib/Tokenizer/: Tokenizer.cpp  Tokenizer.h
src/: main.cpp
